@@ -82,7 +82,7 @@ public class MinMaxOptOnScanRule extends TransformationRule {
         if (groupingKeys != null && !groupingKeys.isEmpty()) {
             // all group by keys are partition keys.
             if (!scanOperator.getPartitionColumns()
-                    .containsAll(groupingKeys.stream().map(x -> x.getName()).collect(Collectors.toList()))) {
+                    .containsAll(groupingKeys.stream().map(ColumnRefOperator::getName).toList())) {
                 return false;
             }
             // must be un-partitioned table, or partition columns are identity columns.
@@ -118,10 +118,7 @@ public class MinMaxOptOnScanRule extends TransformationRule {
                 return false;
             }
             ScalarOperator arg = arguments.get(0);
-            if (!arg.isColumnRef()) {
-                return false;
-            }
-            return true;
+            return arg.isColumnRef();
         });
         return allValid;
     }
